# sferaVoz-consumos-be

./: Cargo.toml
src/: main.rs
src/config/: config.rs  database.rs
src/handlers/: auth_handler.rs  calls_handler.rs  consumos_handler.rs  mod.rs  user_handler.rs
src/middlewares/: auth_middleware.rs
src/models/: calls_model.rs  consumos_model.rs  mod.rs  user_model.rs
src/routes/: auth_routes.rs  calls_routes.rs  consumos_routes.rs  mod.rs  users_routes.rs
src/services/: auth_service.rs  calls_service.rs  consumos_service.rs  jwt_service.rs  mod.rs  user_register_service.rs  user_service.rs
src/utils/: validator.rs
